--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,15 +19,13 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.example</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>operaciones</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>operaciones</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
         </dependency>
     </dependencies>
 
